src/objects/copado__Deployment_Job__c.object
<CustomObject>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Async_Job_ID__c</fullName>
        <label>Async Job ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Deployed__c</fullName>
        <label>% Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Org__c</fullName>
        <label>Destination Org</label>
        <referenceTo>copado__Destination_Org__c</referenceTo>
        <relationshipLabel>Deployment Jobs</relationshipLabel>
        <relationshipName>Deployment_Jobs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Early_Completion_Status__c</fullName>
        <label>Early Completion Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__External_Status__c</fullName>
        <label>External Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status_Flag__c</fullName>
        <formula>IMAGE(
				
  CASE(copado__Status__c,  
  &quot;Success&quot;, &quot;/img/samples/flag_green.gif&quot;,
  &quot;Failed&quot;, &quot;/img/samples/flag_red.gif&quot;,
  &quot;In progress&quot;, &quot;/img/loading.gif&quot;,
  &quot;/s.gif&quot;), 
   &quot;&quot; )+&quot; &quot;+   
			IMAGE(
							CASE(copado__External_Status__c,
			         &quot;Queued&quot;, &quot;/img/loading.gif&quot;,
            &quot;Success&quot;,&quot;/img/samples/flag_green.gif&quot;,
            &quot;Timed out&quot;, &quot;/img/samples/flag_red.gif&quot;,
            &quot;Failed&quot;,&quot;/img/samples/flag_red.gif&quot;,
												&quot;/s.gif&quot;
							), &quot;&quot;
			)</formula>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Step__c</fullName>
        <label>Step</label>
        <referenceTo>copado__Step__c</referenceTo>
        <relationshipLabel>Deployment Jobs</relationshipLabel>
        <relationshipName>Deployment_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__To_Org_Name__c</fullName>
        <formula>copado__Destination_Org__r.copado__To_Org__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validation_ID__c</fullName>
        <inlineHelpText>To be used for Quick deployments. Available since metadata api v33 (Spring 15)</inlineHelpText>
        <label>Validation ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Deployment Job</label>
    <nameField>
        <displayFormat>DJ-{00000}</displayFormat>
        <label>Deployment Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>